@@ -1,13 +1,13 @@
 package ca.uhn.fhir.rest.server;
 
-import static org.hamcrest.Matchers.stringContainsInOrder;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.concurrent.TimeUnit;
-
+import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.rest.annotation.Count;
+import ca.uhn.fhir.rest.annotation.OptionalParam;
+import ca.uhn.fhir.rest.annotation.Search;
+import ca.uhn.fhir.rest.api.EncodingEnum;
+import ca.uhn.fhir.rest.param.TokenParam;
+import ca.uhn.fhir.test.utilities.JettyUtil;
+import ca.uhn.fhir.util.TestUtil;
 import org.apache.commons.io.IOUtils;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpGet;
@@ -25,19 +25,21 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-import ca.uhn.fhir.context.FhirContext;
-import ca.uhn.fhir.rest.annotation.Count;
-import ca.uhn.fhir.rest.annotation.OptionalParam;
-import ca.uhn.fhir.rest.annotation.Search;
-import ca.uhn.fhir.rest.param.TokenParam;
-import ca.uhn.fhir.util.PortUtil;
-import ca.uhn.fhir.util.TestUtil;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.TimeUnit;
+
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.stringContainsInOrder;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThat;
 
 public class SearchCountParamDstu3Test {
 
+	private static final org.slf4j.Logger ourLog = org.slf4j.LoggerFactory.getLogger(SearchCountParamDstu3Test.class);
 	private static CloseableHttpClient ourClient;
 	private static FhirContext ourCtx = FhirContext.forDstu3();
-	private static final org.slf4j.Logger ourLog = org.slf4j.LoggerFactory.getLogger(SearchCountParamDstu3Test.class);
 	private static int ourPort;
 	private static Server ourServer;
 	private static String ourLastMethod;
@@ -52,28 +54,46 @@ public class SearchCountParamDstu3Test {
 	@Test
 	public void testSearch() throws Exception {
 		HttpGet httpGet = new HttpGet("http://localhost:" + ourPort + "/Patient?_count=2");
-		CloseableHttpResponse status = ourClient.execute(httpGet);
-		try {
+
+		try (CloseableHttpResponse status = ourClient.execute(httpGet)) {
 			String responseContent = IOUtils.toString(status.getEntity().getContent());
 			ourLog.info(responseContent);
 			assertEquals(200, status.getStatusLine().getStatusCode());
 			assertEquals("search", ourLastMethod);
-			assertEquals(new Integer(2), ourLastParam);
-			
-			//@formatter:off
+			assertEquals(Integer.valueOf(2), ourLastParam);
+
 			assertThat(responseContent, stringContainsInOrder(
-				"<link>", 
-				"<relation value=\"self\"/>", 
-				"<url value=\"http://localhost:" + ourPort + "/Patient?_count=2\"/>", 
-				"</link>", 
 				"<link>",
-				"<relation value=\"next\"/>", 
-				"<url value=\"http://localhost:" + ourPort + "?_getpages=", "&amp;_getpagesoffset=2&amp;_count=2&amp;_bundletype=searchset\"/>", 
+				"<relation value=\"self\"/>",
+				"<url value=\"http://localhost:" + ourPort + "/Patient?_count=2\"/>",
+				"</link>",
+				"<link>",
+				"<relation value=\"next\"/>",
+				"<url value=\"http://localhost:" + ourPort + "?_getpages=", "&amp;_getpagesoffset=2&amp;_count=2&amp;_bundletype=searchset\"/>",
 				"</link>"));
-			//@formatter:on
-			
-		} finally {
-			IOUtils.closeQuietly(status.getEntity().getContent());
+
+		}
+
+	}
+
+
+	@Test
+	public void testSearchCount0() throws Exception {
+		HttpGet httpGet = new HttpGet("http://localhost:" + ourPort + "/Patient?_count=0&_pretty=true");
+
+		try (CloseableHttpResponse status = ourClient.execute(httpGet)) {
+			String responseContent = IOUtils.toString(status.getEntity().getContent());
+			ourLog.info(responseContent);
+			assertEquals(200, status.getStatusLine().getStatusCode());
+			assertEquals("search", ourLastMethod);
+			assertEquals(Integer.valueOf(0), ourLastParam);
+
+			assertThat(responseContent, stringContainsInOrder(
+				"<Bundle",
+				"<total value=\"99\"/>",
+				"</Bundle>"));
+			assertThat(responseContent, not(containsString("entry")));
+
 		}
 
 	}
@@ -91,52 +111,20 @@ public class SearchCountParamDstu3Test {
 			assertEquals(200, status.getStatusLine().getStatusCode());
 			assertEquals("searchWithNoCountParam", ourLastMethod);
 			assertEquals(null, ourLastParam);
-			
-			//@formatter:off
+
 			assertThat(responseContent, stringContainsInOrder(
-				"<link>", 
-				"<relation value=\"self\"/>", 
-				"<url value=\"http://localhost:" + ourPort + "/Patient?_count=2&amp;_query=searchWithNoCountParam\"/>", 
-				"</link>", 
 				"<link>",
-				"<relation value=\"next\"/>", 
-				"<url value=\"http://localhost:" + ourPort + "?_getpages=", "&amp;_getpagesoffset=2&amp;_count=2&amp;_bundletype=searchset\"/>", 
+				"<relation value=\"self\"/>",
+				"<url value=\"http://localhost:" + ourPort + "/Patient?_count=2&amp;_query=searchWithNoCountParam\"/>",
+				"</link>",
+				"<link>",
+				"<relation value=\"next\"/>",
+				"<url value=\"http://localhost:" + ourPort + "?_getpages=", "&amp;_getpagesoffset=2&amp;_count=2&amp;_bundletype=searchset\"/>",
 				"</link>"));
-			//@formatter:on
-			
+
 		} finally {
 			IOUtils.closeQuietly(status.getEntity().getContent());
 		}
-
-	}
-
-	@AfterClass
-	public static void afterClassClearContext() throws Exception {
-		ourServer.stop();
-		TestUtil.clearAllStaticFieldsForUnitTest();
-	}
-
-	@BeforeClass
-	public static void beforeClass() throws Exception {
-		ourPort = PortUtil.findFreePort();
-		ourServer = new Server(ourPort);
-
-		DummyPatientResourceProvider patientProvider = new DummyPatientResourceProvider();
-
-		ServletHandler proxyHandler = new ServletHandler();
-		RestfulServer servlet = new RestfulServer(ourCtx);
-		servlet.setPagingProvider(new FifoMemoryPagingProvider(10));
-
-		servlet.setResourceProviders(patientProvider);
-		ServletHolder servletHolder = new ServletHolder(servlet);
-		proxyHandler.addServletWithMapping(servletHolder, "/*");
-		ourServer.setHandler(proxyHandler);
-		ourServer.start();
-
-		PoolingHttpClientConnectionManager connectionManager = new PoolingHttpClientConnectionManager(5000, TimeUnit.MILLISECONDS);
-		HttpClientBuilder builder = HttpClientBuilder.create();
-		builder.setConnectionManager(connectionManager);
-		ourClient = builder.build();
 
 	}
 
@@ -151,9 +139,9 @@ public class SearchCountParamDstu3Test {
 		@SuppressWarnings("rawtypes")
 		@Search()
 		public List search(
-				@OptionalParam(name=Patient.SP_IDENTIFIER) TokenParam theIdentifier,
-				@Count() Integer theParam
-				) {
+			@OptionalParam(name = Patient.SP_IDENTIFIER) TokenParam theIdentifier,
+			@Count() Integer theParam
+		) {
 			ourLastMethod = "search";
 			ourLastParam = theParam;
 			ArrayList<Patient> retVal = new ArrayList<Patient>();
@@ -166,7 +154,7 @@ public class SearchCountParamDstu3Test {
 
 		//@formatter:off
 		@SuppressWarnings("rawtypes")
-		@Search(queryName="searchWithNoCountParam")
+		@Search(queryName = "searchWithNoCountParam")
 		public List searchWithNoCountParam() {
 			ourLastMethod = "searchWithNoCountParam";
 			ourLastParam = null;
@@ -177,6 +165,37 @@ public class SearchCountParamDstu3Test {
 			return retVal;
 		}
 		//@formatter:on
+
+	}
+
+	@AfterClass
+	public static void afterClassClearContext() throws Exception {
+		JettyUtil.closeServer(ourServer);
+		TestUtil.clearAllStaticFieldsForUnitTest();
+	}
+
+	@BeforeClass
+	public static void beforeClass() throws Exception {
+		ourServer = new Server(0);
+
+		DummyPatientResourceProvider patientProvider = new DummyPatientResourceProvider();
+
+		ServletHandler proxyHandler = new ServletHandler();
+		RestfulServer servlet = new RestfulServer(ourCtx);
+		servlet.setPagingProvider(new FifoMemoryPagingProvider(10));
+		servlet.setResourceProviders(patientProvider);
+		servlet.setDefaultResponseEncoding(EncodingEnum.XML);
+
+		ServletHolder servletHolder = new ServletHolder(servlet);
+		proxyHandler.addServletWithMapping(servletHolder, "/*");
+		ourServer.setHandler(proxyHandler);
+		JettyUtil.startServer(ourServer);
+		ourPort = JettyUtil.getPortForStartedServer(ourServer);
+
+		PoolingHttpClientConnectionManager connectionManager = new PoolingHttpClientConnectionManager(5000, TimeUnit.MILLISECONDS);
+		HttpClientBuilder builder = HttpClientBuilder.create();
+		builder.setConnectionManager(connectionManager);
+		ourClient = builder.build();
 
 	}
 
